--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script src="/canvas.js"></script>
+    <script src="./canvas.js"></script>
   </body>
 </html>
